sample-aws-eks-auto-mode/examples/cpu/game-2048.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048-cpu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048-cpu
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: app-2048
      tolerations:
      - key: "workload"
        operator: "Equal"
        value: "cpu"
        effect: "NoSchedule"
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: cnrock/2048:latest@sha256:fc83e30a245af39105bb658ff5348fb0dec812ce9b0ff31915b4dc2ab5dce849
          imagePullPolicy: Always
          name: app-2048
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - NET_RAW
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
      automountServiceAccountToken: false
